TICKET-T-6883: Migration from flutter_gen package
Signed-off-by: Guru-cm-here <120634061+Guru-cm-here@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ export-distribution.plist
 .pub/
 /build/
 
+# Ignore all generated localization files
+lib/L10n/generated/
+
 # Web related
 lib/generated_plugin_registrant.dart
 
