--- a/l10n.yaml
+++ b/l10n.yaml
@@ -2,3 +2,6 @@ arb-dir: lib/l10n
 template-arb-file: app_en.arb
 output-localization-file: app_localizations.dart
 use-escaping: true
+header-file: here_header.dart
+output-dir: lib/l10n/generated
+synthetic-package: false
