--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,19 +41,19 @@ environment:
   flutter: ">=3.27.4"
 
 dependencies:
-  battery_plus: 6.2.1
-  connectivity_plus: ^6.1.2
+  battery_plus: 6.2.2
+  connectivity_plus: ^6.1.4
   cupertino_icons: ^1.0.5
   device_info_plus: 11.3.0
   disk_space_plus: 0.2.4
-  file_picker: 10.1.2
+  file_picker: 10.2.0
   flutter:
     sdk: flutter
   flutter_local_notifications: 18.0.1
   flutter_localizations:
     sdk: flutter
-  flutter_svg: 2.0.17
-  flutter_tts: 4.2.1
+  flutter_svg: 2.2.0
+  flutter_tts: 4.2.3
   geolocator: 13.0.2
   # The following adds the HERE SDK for Flutter plugin folder to your application.
   here_sdk:
@@ -62,13 +62,13 @@ dependencies:
   package_info_plus: 8.3.0
   path: 1.9.0
   path_provider: 2.1.5
-  permission_handler: 12.0.0+1
-  provider: 6.0.3
+  permission_handler: 12.0.1
+  provider: 6.1.5
   reorderables: ^0.6.0
   ringtone_player: ^0.1.1
-  shared_preferences: 2.4.0
+  shared_preferences: 2.5.3
   sqflite: 2.4.1
-  url_launcher: ^6.3.1
+  url_launcher: ^6.3.2
   wakelock_plus: 1.3.2
 
 dev_dependencies:
