--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,35 +37,35 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.15.0
 
 environment:
-  sdk: ">=3.6.2 <4.0.0"
-  flutter: ">=3.27.4"
+  sdk: '>=3.9.2 <4.0.0'
+  flutter: '>=3.35.4'
 
 dependencies:
   battery_plus: 6.2.2
   connectivity_plus: ^6.1.4
   cupertino_icons: ^1.0.5
   device_info_plus: 11.3.0
-  disk_space_plus: 0.2.4
+  disk_space_plus: 0.2.6
   file_picker: 10.2.0
   flutter:
     sdk: flutter
   flutter_local_notifications: 18.0.1
   flutter_localizations:
     sdk: flutter
+  flutter_ringtone_player: ^4.0.0+4
   flutter_svg: 2.2.0
   flutter_tts: 4.2.3
   geolocator: 13.0.2
   # The following adds the HERE SDK for Flutter plugin folder to your application.
   here_sdk:
     path: plugins/here_sdk
-  intl: 0.19.0
+  intl: 0.20.2
   package_info_plus: 8.3.0
-  path: 1.9.0
+  path: 1.9.1
   path_provider: 2.1.5
   permission_handler: 12.0.1
   provider: 6.1.5
   reorderables: ^0.6.0
-  ringtone_player: ^0.1.1
   shared_preferences: 2.5.3
   sqflite: 2.4.1
   url_launcher: ^6.3.2
