--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,7 @@ flutter:
   assets:
     - assets/
     - assets/here-icons/icons/core-ui/SVG/
+    - assets/here-icons/icons/data/SVG/
     - assets/here-icons/icons/guidance-icons/manoeuvers-sdk/
     - assets/here-icons/icons/travel-transport-tracking/SVG/
     - assets/here-icons/icons/poi/SVG/
