--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,35 +41,35 @@ environment:
   flutter: '>=3.35.4'
 
 dependencies:
-  battery_plus: 6.2.2
-  connectivity_plus: ^6.1.4
+  battery_plus: 7.0.0
+  connectivity_plus: ^7.0.0
   cupertino_icons: ^1.0.5
-  device_info_plus: 11.3.0
+  device_info_plus: 12.2.0
   disk_space_plus: 0.2.6
-  file_picker: 10.2.0
+  file_picker: 10.3.3
   flutter:
     sdk: flutter
-  flutter_local_notifications: 18.0.1
+  flutter_local_notifications: 19.5.0
   flutter_localizations:
     sdk: flutter
   flutter_ringtone_player: ^4.0.0+4
-  flutter_svg: 2.2.0
+  flutter_svg: 2.2.1
   flutter_tts: 4.2.3
-  geolocator: 13.0.2
+  geolocator: 14.0.1
   # The following adds the HERE SDK for Flutter plugin folder to your application.
   here_sdk:
     path: plugins/here_sdk
   intl: 0.20.2
-  package_info_plus: 8.3.0
+  package_info_plus: 9.0.0
   path: 1.9.1
   path_provider: 2.1.5
   permission_handler: 12.0.1
-  provider: 6.1.5
+  provider: 6.1.5+1
   reorderables: ^0.6.0
   shared_preferences: 2.5.3
   sqflite: 2.4.1
   url_launcher: ^6.3.2
-  wakelock_plus: 1.3.2
+  wakelock_plus: 1.4.0
 
 dev_dependencies:
   flutter_test:
